--- a/indexx.html
+++ b/indexx.html
@@ -17,7 +17,7 @@
                 </a>
                 <ul class="ul">
                     <a class="btn" href="indexx.html">Home</a>
-                    <a class="btn" href="Uv.html">Uv/Uvv</a>
+                    <a class="btn" href="uv.html">Uv/Uvv</a>
                     <a class="btn" href="UT1.html">UT-1</a>
                 </ul>
                              
@@ -39,7 +39,7 @@
             <div class="parada-rpbc-text">
                 <h3>Parada Uv/Uvv</h3>
                 <p>Parada de Manutenção Uv/Uvv, realizada em 18 dias</p>
-                <a href="Uv.html" class="btn animate-btn">Uv/Uvv</a>
+                <a href="uv.html" class="btn animate-btn">Uv/Uvv</a>
             </div>
             <div class="parada-rpbc-img">
                 <img src="img/uv.jpg" alt="">
