--- a/torres.html
+++ b/torres.html
@@ -17,7 +17,7 @@
                 </a>
                 <ul class="ul">
                     <a class="btn" href="indexx.html">Home</a>
-                    <a class="btn" href="Uv.html">Uv/Uvv</a>
+                    <a class="btn" href="uv.html">Uv/Uvv</a>
                     <a class="btn" href="UT1.html">UT-1</a>
                 </ul>
                
