--- a/indexx.html
+++ b/indexx.html
@@ -68,7 +68,7 @@
             <p>Serviços realizados</p>
             <div class="cards">
                 <div class="card-item">
-                    <img src="img/uv.jpg" alt="">
+                    <img src="" alt="">
                     <p class="nome-unidade">Uv/Uvv</p>
                     <p class="descrição-escopo">Escopo principal Uv/Uvv <br/> 
                         2 fornos,<br/> 1 Pré aquecedor,<br/> 5 torres,<br/> 18 vasos, <br/>
