--- a/indexx.html
+++ b/indexx.html
@@ -42,7 +42,7 @@
                 <a href="uv.html" class="btn animate-btn">Uv/Uvv</a>
             </div>
             <div class="parada-rpbc-img">
-                <img src="img/uv.jpg" alt="">
+                <img src="" alt="">
             </div>
         </div>
 
