--- a/elos.html
+++ b/elos.html
@@ -12,11 +12,11 @@
     <header style="background-image: url('img/rpbc_1.jpg__1280x0_q85_ALIAS-cover_crop_subsampling-2.jpg');">
         <div class="container">
             <nav>
-                <a href="indexx.html">
+                <a href="elos.html">
                     <img src="img/marca_elos_header.png" alt="logoelos">
                 </a>
                 <ul class="ul">
-                    <a class="btn" href="indexx.html">Home</a>
+                    <a class="btn" href="elos.html">Home</a>
                     <a class="btn" href="uv.html">Uv/Uvv</a>
                     <a class="btn" href="UT1.html">UT-1</a>
                 </ul>
@@ -71,8 +71,6 @@
                     <img src="" alt="">
                     <p class="nome-unidade">Uv/Uvv</p>
                     <p class="descrição-escopo">Escopo principal Uv/Uvv <br/> 
-                        2 fornos,<br/> 1 Pré aquecedor,<br/> 5 torres,<br/> 18 vasos, <br/>
-                        4 Filtros,<br/> 47 Permutadores, 95 PSV'S</p>
                 </div>
             </div>
             
@@ -80,9 +78,7 @@
                 <div class="card-item">
                     <img src="img/cupula.jpeg" alt="">
                     <p class="nome-unidade">UT1</p>
-                    <p class="descrição-escopo">Escopo principal UT1 <br/> 
-                        3 fornos,<br/> 2 Pré aquecedor,<br/> 9 torres,<br/>6 Reatores,<br/> 32 vasos, <br/>
-                        9 Filtros,<br/> 72 Permutadores, 162 PSV'S</p></p>
+                    <p class="descrição-escopo">Escopo principal UT1 <br/>
                 </div> 
                 
         </div>
