--- a/uv.html
+++ b/uv.html
@@ -12,11 +12,11 @@
     <header style="background-image: url('img/WhatsApp\ Image\ 2024-08-27\ at\ 08.56.53.jpeg');">
         <div class="container">
             <nav>
-                <a href="indexx.html">
+                <a href="elos.html">
                     <img src="img/marca_elos_header.png" alt="logoelos">
                 </a>
                 <ul class="ul">
-                    <a class="btn" href="indexx.html">Home</a>
+                    <a class="btn" href="elos.html">Home</a>
                     <a class="btn" href="uv.html">Uv/Uvv</a>
                     <a class="btn" href="UT1.html">UT-1</a>
                 </ul>
