--- a/torres.html
+++ b/torres.html
@@ -12,11 +12,11 @@
     <header style="background-image: url('')">
         <div class="container">
             <nav>
-                <a href="indexx.html">
+                <a href="elos.html">
                     <img src="img/marca_elos_header.png" alt="logoelos">
                 </a>
                 <ul class="ul">
-                    <a class="btn" href="indexx.html">Home</a>
+                    <a class="btn" href="elos.html">Home</a>
                     <a class="btn" href="uv.html">Uv/Uvv</a>
                     <a class="btn" href="UT1.html">UT-1</a>
                 </ul>
@@ -42,9 +42,7 @@
                 <p> Realizado a remoção de 500 mm do isolamento térmico 
                     - Ao redor das conexões da calota de topo; 
                     - Ao redor da conexão 24; 
-                    - Acima do 1º e 2º anéis de reforço do costado, contados a partir da calota superior; 
-                    - Acima do último anel de reforço (junto à região cônica); 
-                    - Ao redor dos clips de fixação da plataforma superior. </p>
+                </p>
             </div>
            
         </div>
@@ -60,8 +58,6 @@
                     <img src="img/uv.jpg" alt="">
                     <p class="nome-unidade">Uv/Uvv</p>
                     <p class="descrição-escopo"> Escopo principal Uv/Uvv <br/> 
-                        2 fornos,<br/> 1 Pré aquecedor,<br/> 5 torres,<br/> 18 vasos, <br/>
-                        4 Filtros,<br/> 47 Permutadores, 95 PSV'S
                     </p>
                 </div>
         
