--- a/uv.html
+++ b/uv.html
@@ -51,8 +51,7 @@
                 <img src="img/Mídia (18).jpg" alt="elos">
             </div>
         </div>
-        
- 
+    </section>
 
     
     <footer class="footer">
