--- a/torresut.html
+++ b/torresut.html
@@ -44,10 +44,11 @@
             <div class="unidade-uv-text">
                 <h3>T-2323-03</h3>
                 
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Inventore incidunt omnis eum obcaecati. Ipsum molestiae beatae nisi illo, 
-                    quas consequuntur nobis atque architecto veritatis? Nostrum inventore 
-                    ipsum sint at architecto.</p>
+                <p><ol>Substituir trecho que está com chapa de reforço, próximo ao primeiro anel de reforço do topo,
+                    conforme <b>SGM número RPBC/OP/HDT 2021/0070.</ol></b><br>
+                    <ol>Reparar com solda as trincas localizadas no lado sul da bandeja logo abaixo da entrada de refuxo</ol><br>
+                    <ol>Substituir as vigas de sustentação da plataforma de topo.</ol>
+                </p>
             </div>
        </div>
     </section>
@@ -63,10 +64,14 @@
             </div>
             <div class="unidade-uv-text">
                 <h3>T-2323-02</h3>
-                <p> Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Inventore incidunt omnis eum obcaecati. Ipsum molestiae beatae nisi illo, 
-                    quas consequuntur nobis atque architecto veritatis? Nostrum inventore 
-                    ipsum sint at architecto. </p>
+                
+                <p>Realizado a remoção e instalação dos módulos
+                    feito a remoção do recheio
+                    limpeza do recheio no patio de hidrojato
+                    feita a limpeza interna e nos bocas com hidrojato,
+                    feita a pintura externa e na plataforma
+                    feito o carregamento do recheio
+                    montagem dos módulos</p>
             </div>
         </div>
     </section>
@@ -74,6 +79,7 @@
     <footer class="footer">
         <div class="container">
           <p>Desenvolvido por Adoniran Braga</p>
+          <p>O Planejamento é nosso caminho da Segurança</p>
         </div>
     </footer>
  
