--- a/torres.html
+++ b/torres.html
@@ -54,10 +54,18 @@
             </div>
             <div class="unidade-uv-text">
                 <h3>N-6</h3>
-                <p> Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Inventore incidunt omnis eum obcaecati. Ipsum molestiae beatae nisi illo, 
-                    quas consequuntur nobis atque architecto veritatis? Nostrum inventore 
-                    ipsum sint at architecto. </p>
+                <p> <b>Escopo Contratual da N-6</b>
+                    <ol>Raqueteamento</ol>
+                    <ol>Abertura</ol>
+                    <ol>Limpeza manual</ol>
+                    <ol>Remoção e instalação de Isolamento Térmico (30m³)</ol>
+                    <ol>Inspeção e ensaios internos</ol>
+                    <ol>Substituição de Bandejas (6) e Panelas (2)</ol><br>
+                    <ol><b>Escopo Extra da N-6</b></ol>
+                    <ol>Reparo, substituição e instalação de Linning</ol>
+                    <ol>Remoção de bocais (10)</ol>
+                    <ol>Modificações da Engenharia </ol>
+                </p>
             </div>
         </div>
     </section>
@@ -66,7 +74,7 @@
     <section class="unidade-uv" style="background-image: url('img/backcinza.jpg!d');">
         <div class="container">
             <div class="unidade-uv-img">
-                <img src="img/Mídia (19).jpg" alt="">
+                <img src="img/Mídia (13).jpg" alt="">
             </div>
             <div class="unidade-uv-text">
                 <h3>N-28</h3>
