--- a/uv.html
+++ b/uv.html
@@ -57,6 +57,7 @@
     <footer class="footer">
         <div class="container">
           <p>Desenvolvido por Adoniran Braga</p>
+          <p>O Planejamento é nosso caminho da Segurança</p>
         </div>
     </footer>
  
