--- a/torres.html
+++ b/torres.html
@@ -18,7 +18,7 @@
                 <ul class="ul">
                     <a class="btn" href="elos.html">Home</a>
                     <a class="btn" href="uv.html">Uv/Uvv</a>
-                    <a class="btn" href="UT-1.html">UT-1</a>
+                    <a class="btn" href="UT1.html">UT-1</a>
                 </ul>
                
                 </div>                
@@ -38,11 +38,25 @@
                 <img src="img/Mídia (9).jpg" alt="">
             </div>
             <div class="unidade-uv-text">
-                <h3>N-2601</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Inventore incidunt omnis eum obcaecati. Ipsum molestiae beatae nisi illo, 
-                    quas consequuntur nobis atque architecto veritatis? Nostrum inventore 
-                    ipsum sint at architecto.</p>
+                <h3>N-2601 Torre de Vácuo</h3>
+                <p><ol>Dar acesso pelo lado externo da torre a todas as conexões e região de topo até 1,0m abaixo do 2º anel 
+                    anti-vácuo, para inspeção do costado e calota de topo.<br>
+                    Preparar pontos para medição de espessura com ultra-som em 29 RM’s, sendo 8 no casco/calotas e 21 
+                    nas conexões, conforme indicado no croqui em anexo. As conexões devem ser medidas no pescoço, em 
+                    quatro pontos a saber:<br> 
+                    - Conexão vertical: medir nas posições norte (N)/sul (S)/leste (L)/oeste (O);<br> 
+                    - Conexão horizontal: medir nas posições superior (S), inferior (I), lateral esquerda (E), lateral direita (D).<br> 
+                    Medir a espessura no costado e conexões, num total de 92 pontos. (Tempo 8,0 h).<br> 
+                    Efetuar reparos em geral de caldeiraria nas escadas e plataformas de acesso junto a torre, conforme:<br> 
+                    <b>a) Instalar grampos de atracação faltantes;</b><br> 
+                    <b>b) Fixar base da escada de acesso à plataforma de topo;</b><br> 
+                    <b>c) Substituir dois painéis de grade de piso, no canto leste da plataforma de acesso a conexão 
+                    45B/49B;</b><br> 
+                    <b>d) Substituir tira metálica do guarda corpo da escada de marinheiro, de acesso à conexão 49E, na 
+                    segunda plataforma;</b><br> 
+                    <b>e) Repor trecho de aproximadamente 1 m, do rodapé do guarda corpo que envolvia a torre 
+                    removida, na base da torre</b><br>
+                    Prever, reparos no revestimento fire-proof da saia, conforme indicação após inspeção. Estimar 1,0 m².</ol></p>
             </div>
        </div>
     </section>
@@ -53,8 +67,8 @@
                 <img src="img/Mídia (12).jpg" alt="">
             </div>
             <div class="unidade-uv-text">
-                <h3>N-6</h3>
-                <p> <b>Escopo Contratual da N-6</b>
+                <h3>N-6 Torre de Destilação Atmosférica</h3>
+                <p><b>Escopo da N-6</b>
                     <ol>Raqueteamento</ol>
                     <ol>Abertura</ol>
                     <ol>Limpeza manual</ol>
@@ -77,11 +91,29 @@
                 <img src="img/Mídia (13).jpg" alt="">
             </div>
             <div class="unidade-uv-text">
-                <h3>N-28</h3>
-                <p> Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Inventore incidunt omnis eum obcaecati. Ipsum molestiae beatae nisi illo, 
-                    quas consequuntur nobis atque architecto veritatis? Nostrum inventore 
-                    ipsum sint at architecto. </p>
+                <h3>N-28 Retificadora de Diesel Pesado </h3>
+                <p> 
+                    <ol>Abrir as 2 bocas-de-visita do equipamento. 
+                        Executar limpeza (GL-1) na face de vedação dos flanges e as respectivas tampas das bocas de-visita para inspeção visual.<br> 
+                        Executar inspeção visual na face de vedação dos flanges e tampas das BV´s.<br>
+                        Após a inspeção visual destes flanges e suas tampas, proteger as regiões de vedação 
+                        com discos de madeira.<br> 
+                        Executar inspeção visual geral externa da torre.<br> 
+                        Preparar os 11 RM’s de 50mm X 50mm, para medição de espessura (GL-3), conforme indicado 
+                        no croqui em anexo. Para as conexões preparar 4 posições defasadas de 90º para cada ponto 
+                        de ME. <br>
+                        Instalar andaime ou o uso inspeção por alpinismo para acesso aos pontos necessários 
+                        (sem acesso).<br> 
+                        Preparar 02 RM’s em cada painel assoalho de bandeja, sendo 04 bandejas, num total 
+                        de 08 RM’s.<br>
+                        Substituir o flange cego da conexão <b>“J” (Ø1 ½ “, 300#)</b> por outro flange cego em inox 316.<br>
+                        Remover para inspeção uma faixa de isolamento de 500 mm de altura em toda a 
+                        circunferência da torre, <b>partindo da linha de solda da N-29 com a N-28 para baixo</b>.<br>
+                        Remover o isolamento térmico em pontos localizados do equipamento conforme orientação 
+                        do IE para inspeção e aplicação de proteção superficial por pintura<br>
+                        <b>Prever a substituição de 10 borbulhadores (tipo 1 em AISI 405 ou 410)</b>
+                    </ol>
+                </p>
             </div>
         </div>
     </section>
@@ -92,11 +124,26 @@
                 <img src="img/Mídia (18).jpg" alt="">
             </div>
             <div class="unidade-uv-text">
-                <h3>N-29</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Inventore incidunt omnis eum obcaecati. Ipsum molestiae beatae nisi illo, 
-                    quas consequuntur nobis atque architecto veritatis? Nostrum inventore 
-                    ipsum sint at architecto.</p>
+                <h3>N-29 Retificadora de Diesel Leve</h3>
+                <p><ol>Abrir as 2 bocas-de-visita do equipamento. 
+                    Executar limpeza (GL-1) na face de vedação dos flanges e as respectivas tampas das bocas de-visita para inspeção visual.<br> 
+                    Executar inspeção visual na face de vedação dos flanges e tampas das BV´s.<br> 
+                    Após a inspeção visual destes flanges e suas tampas, proteger as regiões de vedação 
+                    com discos de madeira.<br> 
+                    Executar inspeção visual geral externa.<br> 
+                    Preparar os 10 RM’s de 50mm X 50mm, para medição de espessura (GL-3), conforme indicado 
+                    no croqui em anexo. Para as conexões preparar 4 posições defasadas de 90º para cada ponto 
+                    de ME.<br> 
+                    Preparar 02 RM’s em cada painel assoalho de bandeja, sendo 04 bandejas, num total 
+                    de 08 RM’s.<br>
+                    Remover uma faixa de 500mm de altura em toda a circunferência da torre, partindo da linha 
+                    de solda da N-30 para a N-29, ou seja, de cima para baixo, para inspeção do costado.<br>
+                    Reparar com solda o guarda corpo Oeste da plataforma da BV inferior. (Cortado com disco de 
+                    corte e encontra-se sem fixação).
+                    <b>Substituir todos os atracadores de fixação das bandejas e vertedores, quantidade e tipo, 
+                    conforme projeto.</b> 
+
+                   </ol></p>
             </div>
     </section>        
 
@@ -106,11 +153,25 @@
                 <img src="img/Mídia (17).jpg" alt="">
             </div>
             <div class="unidade-uv-text">
-                <h3>N-30</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Inventore incidunt omnis eum obcaecati. Ipsum molestiae beatae nisi illo, 
-                    quas consequuntur nobis atque architecto veritatis? Nostrum inventore 
-                    ipsum sint at architecto.</p>
+                <h3>N-30 Retificadora de Querosene</h3>
+                <p><ol>Abrir as 2 bocas-de-visita do equipamento<br>
+                    Executar inspeção visual geral externa da torre<br>
+                    Preparar os 10 RM’s de 50mm X 50mm, para medição de espessura (GL-3), conforme indicado 
+                    no croqui em anexo.<br> Para as conexões preparar 4 posições defasadas de 90º para cada ponto 
+                    de ME<br>
+                    Remover o isolamento térmico em pontos localizados do equipamento conforme orientação 
+                    do IE para inspeção e aplicação de proteção superficial por pintura<br>
+                    Prever reparos no isolamento térmico ao longo da torre. Área Prevista: 6 m².<br>
+                    Remover todo o isolamento da calota superior e trecho do costado de 1,5m em todo 
+                    perímetro, para inspeção, aplicação de pintura e Reisolar, conforme projeto<br>
+                    Remover o filtro de fundo para hidrojateamento e inspeção<br>
+                    Executar limpeza geral interna do equipamento utilizando hidrojato de alta pressão<br>
+                    Fazer LP na solda interna da calota inferior x costado e remover as descontinuidades 
+                    encontradas<br>
+                    Realizar recomposição da solda interna da calota inferior x costado, com novo passe de 
+                    acabamento, (devido a corrosão existente).<br> 
+                    <b>Substituir os tubos distribuidores internos, conforme projeto</b><br>
+                    <b>Substituir a calha coletora superior central da bandeja #1, conforme projeto</b> </ol></p>
             </div>
        </div>
     </section>
@@ -119,6 +180,8 @@
     <footer class="footer">
         <div class="container">
           <p>Desenvolvido por Adoniran Braga</p>
+          <p>O Planejamento é nosso caminho da Segurança</p>
+
         </div>
     </footer>
  
