--- a/torres.html
+++ b/torres.html
@@ -26,7 +26,7 @@
             <section class="banner" >
                 <div class="banner-text">
                     <h1>UV/UVV</h1>
-                    <p>unidade de vácuo e deslitação</p>
+                    <p><b>unidade de vácuo e deslitação</b></p>
                 </div>
             </section>
         </div>
