--- a/torresut.html
+++ b/torresut.html
@@ -65,13 +65,13 @@
             <div class="unidade-uv-text">
                 <h3>T-2323-02</h3>
                 
-                <p>Realizado a remoção e instalação dos módulos
-                    feito a remoção do recheio
-                    limpeza do recheio no patio de hidrojato
-                    feita a limpeza interna e nos bocas com hidrojato,
-                    feita a pintura externa e na plataforma
-                    feito o carregamento do recheio
-                    montagem dos módulos</p>
+                <p><ol>Montar acesso, exaustão e iluminação, onde necessário, para inspeção do equipamento.<br>
+                    Preparar a superfície e realizar ensaio de ME, conforme indicado no croqui anexo. Total de 25 pontos<br>
+                    Realizar inspeção visual externa do equipamento (com registro de imagem), incluindo: saia, berço ou 
+                    perna (dependendo do tipo de equipamento), olhal de içamento (se tiver), isolamento térmico<br> (se tiver:
+                    atentar para CSI) concreto fire proof (se tiver), chumbadores (se tiver) e aterramento elétrico.<br>
+                    Realizar martelamento das conexões soldadas com diâmetro menor ou igual à 2’’<br>
+                    Remover recheios internos de <b>PALL RINGS</b>, lavar e separá-los para inspeção. </ol></p>
             </div>
         </div>
     </section>
