--- a/uv.html
+++ b/uv.html
@@ -26,7 +26,7 @@
             <section class="banner" >
                 <div class="banner-text">
                     <h1>UV/UVV</h1>
-                    <p>unidade de destilação a vácuo</p>
+                    <p><b>unidade de destilação a vácuo</b></p>
                 </div>
             </section>
         </div>
@@ -42,8 +42,7 @@
                 </p>
                 <ul>
                     <li><a href="torres.html">Torres</a></li>
-                    <li><a href="vaso.html">vasos</a></li>
-                    <li><a href="permutador.html">Permutadores</a></li>
+                   
                 </ul>
                  
             </div>
