--- a/elos.html
+++ b/elos.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="img/thelos.png">      
     <link rel="stylesheet" href="style.css">
-    <title>Elos Engenharia</title>
+    <title>Planejamento Elos 2024</title>
     
 </head>
 <body>
