--- a/elos.html
+++ b/elos.html
@@ -32,7 +32,7 @@
 
     <main>
         <section class="parada-rpbc" style="background-image: url('img/backcinza.jpg!d');">
-            <h3><center>Planejamento Elos 2024 - PARADA DE MANUETNÇÃO RPBC</center></h3>
+            <h3><center>Planejamento Elos 2024 - PARADA DE MANUTENÇÃO RPBC</center></h3>
             <p><center></center></p><br>
             <div class="slider1">
                 <div class="slides">
