--- a/permutadores.html
+++ b/permutadores.html
@@ -78,6 +78,10 @@
         <div class="container">
             <div class="unidade-uv-img">
                 <img src="img/P-22313-03B (1).jpg">
+                <img src="img/Mídia (2).jpg">
+                <img src="img/Mídia (3).jpg">
+                <img src="img/Mídia (4).jpg">
+                
             </div>
             <div class="unidade-uv-text">
                 <h3>P-22313-03 B</h3>
@@ -120,6 +124,8 @@
         <div class="container">
             <div class="unidade-uv-img">
                 <img src="img/P-22313-03C (11).jpg" alt="">
+                <img src="img/P03C.jpg" alt="">
+                <img src="img/p03-c.jpg" alt="">
 
             </div>
             <div class="unidade-uv-text">
@@ -207,6 +213,10 @@
         <div class="container">
             <div class="unidade-uv-img">
                 <img src="img/P-22313-05 (4).jpg" alt="">
+                <img src="img/P-05.jpg" alt="">
+                <img src="img/05-2.jpg" alt="">
+                <img src="img/P05-2 (2).jpg" alt="">
+                <img src="img/p05-3.jpg" alt="">
         </div>
             <div class="unidade-uv-text">
                 <h3>P-22313-05</h3>
