--- a/elos.html
+++ b/elos.html
@@ -32,7 +32,7 @@
 
     <main>
         <section class="parada-rpbc" style="background-image: url('img/backcinza.jpg!d');">
-            <h3><center>Planejamento Elos 2024 - PARADA DE MANUTENÇÃO RPBC</center></h3>
+            <h3><center>Planejamento Elos 2024 - PARADA DE MANUETNÇÃO RPBC</center></h3>
             <p><center></center></p><br>
             <div class="slider1">
                 <div class="slides">
@@ -80,7 +80,8 @@
                 <div class="parada-rpbc-text">
                     <h3>Parada Uv/Uvv</h3>
                     <p>Parada de Manutenção Uv/Uvv</p>
-                    <a href="uv.html" class="btn animate-btn">Uv/Uvv</a>
+                    <a href="uv.html" class="btn animate-btn">Uv/Uvv</a><br><br>
+                    
                 </div>
             </div>
         </section>
@@ -117,7 +118,8 @@
     
     <footer class="footer">
         <div class="container">
-            <p>Desenvolvido por Adoniran Braga</p>
+            <img src="img/marca_elos_header.png" alt="">
+            <strong><p>Planejamento Elos</p></strong>
             <p>O Planejamento é nosso caminho da Segurança</p>
         </div>
     </footer>
