--- a/torresut.html
+++ b/torresut.html
@@ -34,7 +34,7 @@
 
     <section class="unidade-uv" style="background-image: url('img/backcinza.jpg!d');">
         <div class="container">
-            <div class="unidade-uv-img">
+            <div class="unidade-rpbc-img">
                 <video src="img/video remoção da cupula comprimido.mp4"
                  controls
                  width="350"
@@ -55,7 +55,7 @@
     
     <section class="unidade-uv" style="background-image: url('img/backcinza.jpg!d');">
         <div class="container">
-            <div class="unidade-uv-img">
+            <div class="unidade-rpbc-img">
                 <video src="img/instalação comprimido.mp4"
                 controls
                 width="350"
@@ -78,8 +78,9 @@
 
     <footer class="footer">
         <div class="container">
-          <p>Desenvolvido por Adoniran Braga</p>
-          <p>O Planejamento é nosso caminho da Segurança</p>
+            <img src="img/marca_elos_header.png" alt="">
+          <p></p>
+          <p></p>
         </div>
     </footer>
  
