--- a/vasosut.html
+++ b/vasosut.html
@@ -146,8 +146,9 @@
     
     <footer class="footer">
         <div class="container">
-          <p>Desenvolvido por Adoniran Braga</p>
-          <p>O Planejamento é nosso caminho da Segurança</p>
+            <img src="img/marca_elos_header.png" alt="">
+          <p></p>
+          <p></p>
 
         </div>
     </footer>
