--- a/vasosuv.html
+++ b/vasosuv.html
@@ -77,6 +77,8 @@
                 <img src="img/O-0203 (1).jpg" alt="">
                 <img src="img/O-0203 (12).jpg" alt="">
                 <img src="img/O-0203 (13).jpg" alt="">
+                <img src="img/vaso 0203 interno.jpg" alt="">
+                <img src="img/interno pintado 0203.jpg" alt="">
             </div>
             <div class="unidade-uv-text">
                 <right><h3>O-0203 REFLUXO DE TOPO DA N-6</h3>
@@ -107,8 +109,9 @@
     
     <footer class="footer">
         <div class="container">
-          <p>Desenvolvido por Adoniran Braga</p>
-          <p>O Planejamento é nosso caminho da Segurança</p>
+            <img src="img/marca_elos_header.png" alt="">
+          <p></p>
+          <p></p>
 
         </div>
     </footer>
