--- a/torres.html
+++ b/torres.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
@@ -179,8 +179,9 @@
     
     <footer class="footer">
         <div class="container">
-          <p>Desenvolvido por Adoniran Braga</p>
-          <p>O Planejamento é nosso caminho da Segurança</p>
+            <img src="img/marca_elos_header.png" alt="">
+          <p></p>
+          <p></p>
 
         </div>
     </footer>
