--- a/uv.html
+++ b/uv.html
@@ -27,6 +27,7 @@
                 <div class="banner-text">
                     <h1>UV/UVV</h1>
                     <p><b>unidade de destilação a vácuo</b></p>
+                    <p><b>Destilação atmosférica</b></p>
                 </div>
             </section>
         </div>
@@ -55,8 +56,9 @@
     
     <footer class="footer">
         <div class="container">
-          <p>Desenvolvido por Adoniran Braga</p>
-          <p>O Planejamento é nosso caminho da Segurança</p>
+            <img src="img/marca_elos_header.png" alt="">
+          <p></p>
+          <p></p>
         </div>
     </footer>
  
