--- a/uv.html
+++ b/uv.html
@@ -26,8 +26,8 @@
             <section class="banner" >
                 <div class="banner-text">
                     <h1>UV/UVV</h1>
-                    <p><b>unidade de destilação a vácuo</b></p>
-                    <p><b>Destilação atmosférica</b></p>
+                    <p><b>Uvv - Unidade de destilação a vácuo</b></p>
+                    <p><b>Uv - Destilação atmosférica</b></p>
                 </div>
             </section>
         </div>
@@ -36,11 +36,10 @@
     <section class="unidade-uv" style="background-image: url('img/backcinza.jpg!d');">
         <div class="container">
             <div class="unidade-uv-text" >
-                <h3>Unidade de destilação</h3>
-                <h2>Unidade de destilação a vácuo</h2>
-                <p>Apresentamos o escopo das paradas da Uv/Uvv, os nossos serviços realizados
-                   com excelencia qualidade e acima de tudo com bastante segurança.
-                </p>
+                <h3>Unidade de Destilação e Unidade de Destilação a Vácuo</h3><br>
+                <p>Apresentamos o escopo completo das paradas das unidades UV/UVV. 
+                   Nossos serviços são realizados com excelência, alta qualidade e acima de tudo, 
+                   com o máximo compromisso com a segurança.</p><br>
                 <ul>
                     <li><a href="torres.html">Torres</a></li>
                     <li><a href="vasosuv.html">Vasos Uv / Uvv</a></li>
