--- a/torres.html
+++ b/torres.html
@@ -65,21 +65,22 @@
         <div class="container">
             <div class="unidade-uv-img">
                 <img src="img/Mídia (12).jpg" alt="">
+                <img src="img/interno N6.jpg" alt="">
             </div>
             <div class="unidade-uv-text">
-                <h3>N-6 Torre de Destilação Atmosférica</h3>
-                <p><b>Escopo da N-6</b>
-                    <ol>Raqueteamento</ol>
-                    <ol>Abertura</ol>
-                    <ol>Limpeza manual</ol>
-                    <ol>Remoção e instalação de Isolamento Térmico (30m³)</ol>
-                    <ol>Inspeção e ensaios internos</ol>
-                    <ol>Substituição de Bandejas (6) e Panelas (2)</ol><br>
-                    <ol><b>Escopo Extra da N-6</b></ol>
-                    <ol>Reparo, substituição e instalação de Linning</ol>
-                    <ol>Remoção de bocais (10)</ol>
-                    <ol>Modificações da Engenharia </ol>
-                </p>
+                <h3>N-6 Fracionadora</h3>
+                <p><b>Externo:</b><br>
+                    Abertura de bocas-de-visita para inspeção e limpeza.<br>
+                    Inspeção visual geral e medição de espessura por ultrassom.<br>
+                    Remoção e reinstalação de isolamento térmico e flanges.<br>
+                    Reparos em conexões e instrumentos.<br>
+                    Substituição de componentes corroídos e não operacionais.<br>
+                    <b>Interno:</b><br>
+                    Inspeção preliminar através de bocas-de-visita e alçapões.<br>
+                    Substituição de bandejas, borbulhadores, e revestimentos internos.<br>
+                    Limpeza e inspeção com hidrojato.<br>
+                    Testes de estanqueidade em pontos específicos.<br>
+                    O objetivo é garantir a integridade da torre e eliminar riscos de corrosão e falhas operacionais.</p>
             </div>
         </div>
     </section>
