--- a/torres.html
+++ b/torres.html
@@ -1,4 +1,3 @@
-!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
@@ -79,7 +78,7 @@
                     Inspeção preliminar através de bocas-de-visita e alçapões.<br>
                     Substituição de bandejas, borbulhadores, e revestimentos internos.<br>
                     Limpeza e inspeção com hidrojato.<br>
-                    Testes de estanqueidade em pontos específicos.<br>
+                    Testes de estanqueidade em pontos específicos.
                     O objetivo é garantir a integridade da torre e eliminar riscos de corrosão e falhas operacionais.</p>
             </div>
         </div>
